# pangeo-workflow-examples

./: .gitignore  01_eo-discover-eodag.ipynb  02_eo-discover-pystac .ipynb  02_eo-discover-pystac.ipynb  Makefile  README.md  environment.yml  pangeo-workflow-examples.yml  pyproject.toml
.ipynb_checkpoints/: 01_eo-discover-eodag-checkpoint.ipynb
