[tool.poetry]
name = "pangeo-workflow-examples"
version = "0.1.0"
description = ""
authors = ["Martin Schobben <martin.schobben@geo.tuwien.ac.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
eodag = "^2.12.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
jupyterlab = "^4.2.0"
nbgrader = "^0.9.2"
nbgitpuller = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


